fix(navbar): fix navbar alignment

--- a/src/components/General/Navbar/navbar.module.css
+++ b/src/components/General/Navbar/navbar.module.css
@@ -5,18 +5,17 @@
 
     top: 0;
     position: sticky;
-    
+
     backdrop-filter: blur(10px);
     background-color: rgba(0, 0, 0, 0.2);
 
     border-radius: 10px;
-    padding: 0 10px;
-   
+
     width: 100%;
 
-    text-shadow: 0 0 5px rgba(0, 0, 0, .4);
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
 }
-  
+
 #navbar-logo {
     width: 50px;
     height: 50px;
@@ -31,4 +30,3 @@
     padding: 0;
     gap: 32px;
 }
-  
